[package]
name = "custom_leptos_components_examples"
version = "0.7.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7.8", features = ["csr"] }
leptos_meta = { version = "0.7.8" }
leptos_router = { version = "0.7.8" }
gloo-net = { version = "0.6.0", features = ["http"] }
console_error_panic_hook = { version = "0.1.7" }
wasm-bindgen = "0.2.100"
rand = "0.9.2"
getrandom = { version = "0.3.3", features = ["wasm_js"] } #required for rand to work with wasm


# custom-leptos-components = {git="https://github.com/vertec-io/custom-leptos-components", features = ["csr"]}
custom-leptos-components = {path="../custom-leptos-components", features = ["csr"]}

[dependencies.web-sys]
version = "0.3.77"
features = ['CanvasRenderingContext2d', 'Document', 'Element', 'HtmlCanvasElement', 'Window']

